// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"sourceMap" option false should not generate source maps when previous loader does not generate source maps: errors 1`] = `Array []`;

exports[`"sourceMap" option false should not generate source maps when previous loader does not generate source maps: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option false should not generate source maps when previous loader does not generate source maps: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"sourceMap" option false should not generate source maps when previous loader does not generate source maps: warnings 1`] = `Array []`;

exports[`"sourceMap" option false should not generate source maps when previous loader generates source maps: errors 1`] = `Array []`;

exports[`"sourceMap" option false should not generate source maps when previous loader generates source maps: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option false should not generate source maps when previous loader generates source maps: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"sourceMap" option false should not generate source maps when previous loader generates source maps: warnings 1`] = `Array []`;

exports[`"sourceMap" option false should not generate source maps: errors 1`] = `Array []`;

exports[`"sourceMap" option false should not generate source maps: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option false should not generate source maps: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"sourceMap" option false should not generate source maps: warnings 1`] = `Array []`;

exports[`"sourceMap" option not specified should not generate source maps: errors 1`] = `Array []`;

exports[`"sourceMap" option not specified should not generate source maps: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option not specified should not generate source maps: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"sourceMap" option not specified should not generate source maps: warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps #2: errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps #2: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".foo {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/with-query.css\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,UAAU;AACZ\\",\\"sourcesContent\\":[\\".foo {\\\\n  color: red;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps #2: result 1`] = `
Array [
  Array [
    "./source-map/with-query.css?url=false",
    ".foo {
  color: red;
}
",
    "",
    Object {
      "mappings": "AAAA;EACE,UAAU;AACZ",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/with-query.css",
      ],
      "sourcesContent": Array [
        ".foo {
  color: red;
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps #2: warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps and do not change "[contenthash]" on different platform: errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps and do not change "[contenthash]" on different platform: js source map 1`] = `
Object {
  "file": "main.6bf096b30a7d4c501d5b.bundle.js",
  "mappings": ";QAAA;QACA;;QAEA;QACA;;QAEA;QACA;QACA;QACA;QACA;QACA;QACA;QACA;QACA;QACA;;QAEA;QACA;;QAEA;QACA;;QAEA;QACA;QACA;;;QAGA;QACA;;QAEA;QACA;;QAEA;QACA;QACA;QACA,0CAA0C,gCAAgC;QAC1E;QACA;;QAEA;QACA;QACA;QACA,wDAAwD,kBAAkB;QAC1E;QACA,iDAAiD,cAAc;QAC/D;;QAEA;QACA;QACA;QACA;QACA;QACA;QACA;QACA;QACA;QACA;QACA;QACA,yCAAyC,iCAAiC;QAC1E,gHAAgH,mBAAmB,EAAE;QACrI;QACA;;QAEA;QACA;QACA;QACA,2BAA2B,0BAA0B,EAAE;QACvD,iCAAiC,eAAe;QAChD;QACA;QACA;;QAEA;QACA,sDAAsD,+DAA+D;;QAErH;QACA;;;QAGA;QACA;;;;;;;;;;;;;AClFA;AAAA;AAAA;AAAA;AACyE;AACzE,8BAA8B,0DAA2B;AACzD;AACA,8BAA8B,QAAS,YAAY,gBAAgB,GAAG,SAAS,6FAA6F,UAAU,kCAAkC,gBAAgB,GAAG,KAAK;AAChP;AACe,sFAAuB,EAAC;;;;;;;;;;;;ACNvC;AACA;AACA;AACA;AACA;AACA;AACA;AACA;;AAEA;AACA;AACA;AACA;;AAEA;AACA,yBAAyB,QAAQ,EAAE,EAAE,SAAS;AAC9C;;AAEA;AACA,KAAK;AACL;;AAEA;AACA;AACA;AACA;AACA;AACA;AACA;;AAEA;;AAEA;AACA,qBAAqB,iBAAiB;AACtC;AACA;;AAEA;AACA;AACA;AACA;AACA;;AAEA,mBAAmB,oBAAoB;AACvC;;AAEA;AACA;AACA;AACA;;AAEA;AACA;AACA;AACA,SAAS;AACT,uBAAuB,WAAW,OAAO,QAAQ;AACjD;AACA;;AAEA;AACA;AACA;;AAEA;AACA;;AAEA;AACA;AACA;AACA;;AAEA;AACA;AACA;;AAEA;AACA;AACA;AACA,mCAAmC,4BAA4B,EAAE,OAAO;AACxE;;AAEA;AACA;;AAEA;AACA;;AAEA;AACA;AACA;AACA;AACA,uDAAuD,cAAc,SAAS,OAAO;;AAErF,gBAAgB,KAAK;AACrB;;;;;;;;;;;;;AC9FA;AAAA;AAAA;AAAA;AAAA;AACsE;AACsC;AAC5G,8BAA8B,0DAA2B;AACzD,0BAA0B,qFAAiC;AAC3D;AACA,8BAA8B,QAAS,WAAW,eAAe,GAAG,SAAS,qFAAqF,UAAU,yDAAyD,YAAY,eAAe,GAAG,KAAK;AACxQ;AACe,sFAAuB,EAAC;;;;;;;;;;;;;ACRvC;AAAA;AAA8B;;AAE9B,aAAa,kDAAG;;AAED,iHAAG,EAAC",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "webpack:///webpack/bootstrap",
    "webpack:///./source-map/nested/nested.css",
    "webpack:////home/evilebottnawi/IdeaProjects/css-loader/src/runtime/api.js",
    "webpack:///./source-map/basic.css",
    "webpack:///./source-map/basic.js",
  ],
  "sourcesContent": Array [
    " 	// The module cache
 	var installedModules = {};

 	// The require function
 	function __webpack_require__(moduleId) {

 		// Check if module is in cache
 		if(installedModules[moduleId]) {
 			return installedModules[moduleId].exports;
 		}
 		// Create a new module (and put it into the cache)
 		var module = installedModules[moduleId] = {
 			i: moduleId,
 			l: false,
 			exports: {}
 		};

 		// Execute the module function
 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);

 		// Flag the module as loaded
 		module.l = true;

 		// Return the exports of the module
 		return module.exports;
 	}


 	// expose the modules object (__webpack_modules__)
 	__webpack_require__.m = modules;

 	// expose the module cache
 	__webpack_require__.c = installedModules;

 	// define getter function for harmony exports
 	__webpack_require__.d = function(exports, name, getter) {
 		if(!__webpack_require__.o(exports, name)) {
 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
 		}
 	};

 	// define __esModule on exports
 	__webpack_require__.r = function(exports) {
 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
 		}
 		Object.defineProperty(exports, '__esModule', { value: true });
 	};

 	// create a fake namespace object
 	// mode & 1: value is a module id, require it
 	// mode & 2: merge all properties of value into the ns
 	// mode & 4: return value when already ns object
 	// mode & 8|1: behave like require
 	__webpack_require__.t = function(value, mode) {
 		if(mode & 1) value = __webpack_require__(value);
 		if(mode & 8) return value;
 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
 		var ns = Object.create(null);
 		__webpack_require__.r(ns);
 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
 		return ns;
 	};

 	// getDefaultExport function for compatibility with non-harmony modules
 	__webpack_require__.n = function(module) {
 		var getter = module && module.__esModule ?
 			function getDefault() { return module['default']; } :
 			function getModuleExports() { return module; };
 		__webpack_require__.d(getter, 'a', getter);
 		return getter;
 	};

 	// Object.prototype.hasOwnProperty.call
 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };

 	// __webpack_public_path__
 	__webpack_require__.p = \\"/webpack/public/path/\\";


 	// Load entry module and return exports
 	return __webpack_require__(__webpack_require__.s = \\"./source-map/basic.js\\");
",
    "// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".nested {\\\\n  color: blue;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/nested/nested.css\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,WAAW;AACb\\",\\"sourcesContent\\":[\\".nested {\\\\n  color: blue;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
",
    "/*
  MIT License http://www.opensource.org/licenses/mit-license.php
  Author Tobias Koppers @sokra
*/
// css base code, injected by the css-loader
// eslint-disable-next-line func-names
module.exports = function (useSourceMap) {
  const list = [];

  // return the list of modules as css string
  list.toString = function toString() {
    return this.map((item) => {
      const content = cssWithMappingToString(item, useSourceMap);

      if (item[2]) {
        return \`@media \${item[2]} {\${content}}\`;
      }

      return content;
    }).join('');
  };

  // import a list of modules into the list
  // eslint-disable-next-line func-names
  list.i = function (modules, mediaQuery, dedupe) {
    if (typeof modules === 'string') {
      // eslint-disable-next-line no-param-reassign
      modules = [[null, modules, '']];
    }

    const alreadyImportedModules = {};

    if (dedupe) {
      for (let i = 0; i < this.length; i++) {
        // eslint-disable-next-line prefer-destructuring
        const id = this[i][0];

        if (id != null) {
          alreadyImportedModules[id] = true;
        }
      }
    }

    for (let i = 0; i < modules.length; i++) {
      const item = [].concat(modules[i]);

      if (dedupe && alreadyImportedModules[item[0]]) {
        // eslint-disable-next-line no-continue
        continue;
      }

      if (mediaQuery) {
        if (!item[2]) {
          item[2] = mediaQuery;
        } else {
          item[2] = \`\${mediaQuery} and \${item[2]}\`;
        }
      }

      list.push(item);
    }
  };

  return list;
};

function cssWithMappingToString(item, useSourceMap) {
  const content = item[1] || '';
  // eslint-disable-next-line prefer-destructuring
  const cssMapping = item[3];

  if (!cssMapping) {
    return content;
  }

  if (useSourceMap && typeof btoa === 'function') {
    const sourceMapping = toComment(cssMapping);
    const sourceURLs = cssMapping.sources.map(
      (source) => \`/*# sourceURL=\${cssMapping.sourceRoot || ''}\${source} */\`
    );

    return [content].concat(sourceURLs).concat([sourceMapping]).join('\\\\n');
  }

  return [content].join('\\\\n');
}

// Adapted from convert-source-map (MIT)
function toComment(sourceMap) {
  // eslint-disable-next-line no-undef
  const base64 = btoa(unescape(encodeURIComponent(JSON.stringify(sourceMap))));
  const data = \`sourceMappingURL=data:application/json;charset=utf-8;base64,\${base64}\`;

  return \`/*# \${data} */\`;
}
",
    "// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??ref--4-rules-0!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/basic.css\\"],\\"names\\":[],\\"mappings\\":\\"AAEA;EACE,UAAU;AACZ\\",\\"sourcesContent\\":[\\"@import \\\\\\"./nested/nested.css\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
",
    "import css from './basic.css';

__export__ = css;

export default css;
",
  ],
  "version": 3,
}
`;

exports[`"sourceMap" option true should generate source maps and do not change "[contenthash]" on different platform: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/basic.css\\"],\\"names\\":[],\\"mappings\\":\\"AAEA;EACE,UAAU;AACZ\\",\\"sourcesContent\\":[\\"@import \\\\\\"./nested/nested.css\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps and do not change "[contenthash]" on different platform: result 1`] = `Object {}`;

exports[`"sourceMap" option true should generate source maps and do not change "[contenthash]" on different platform: warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when css was extracted and do not change "[contenthash]" on different platform: errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when css was extracted and do not change "[contenthash]" on different platform: extracted css 1`] = `
".nested {
  color: blue;
}

.class {
  color: red;
}


/*# sourceMappingURL=main.7232fe75dbf29c350324.css.map*/"
`;

exports[`"sourceMap" option true should generate source maps when css was extracted and do not change "[contenthash]" on different platform: source map 1`] = `
Object {
  "file": "main.7232fe75dbf29c350324.css",
  "mappings": "AAAA;EACE,WAAW;AACb;;ACAA;EACE,UAAU;AACZ",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "webpack:///source-map/nested/nested.css",
    "webpack:///source-map/basic.css",
  ],
  "sourcesContent": Array [
    ".nested {
  color: blue;
}
",
    "@import \\"./nested/nested.css\\";

.class {
  color: red;
}
",
  ],
  "version": 3,
}
`;

exports[`"sourceMap" option true should generate source maps when css was extracted and do not change "[contenthash]" on different platform: warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when css was extracted: errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when css was extracted: extracted css 1`] = `
".nested {
  color: blue;
}

.class {
  color: red;
}


/*# sourceMappingURL=main.css.map*/"
`;

exports[`"sourceMap" option true should generate source maps when css was extracted: source map 1`] = `
Object {
  "file": "main.css",
  "mappings": "AAAA;EACE,WAAW;AACb;;ACAA;EACE,UAAU;AACZ",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "webpack:///source-map/nested/nested.css",
    "webpack:///source-map/basic.css",
  ],
  "sourcesContent": Array [
    ".nested {
  color: blue;
}
",
    "@import \\"./nested/nested.css\\";

.class {
  color: red;
}
",
  ],
  "version": 3,
}
`;

exports[`"sourceMap" option true should generate source maps when css was extracted: warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader does not generate source maps: errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader does not generate source maps: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/basic.css\\"],\\"names\\":[],\\"mappings\\":\\"AAEA;EACE,UAAU;AACZ\\",\\"sourcesContent\\":[\\"@import \\\\\\"./nested/nested.css\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps when previous loader does not generate source maps: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
    Object {
      "mappings": "AAAA;EACE,WAAW;AACb",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/nested/nested.css",
      ],
      "sourcesContent": Array [
        ".nested {
  color: blue;
}
",
      ],
      "version": 3,
    },
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
    Object {
      "mappings": "AAEA;EACE,UAAU;AACZ",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/basic.css",
      ],
      "sourcesContent": Array [
        "@import \\"./nested/nested.css\\";

.class {
  color: red;
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps when previous loader does not generate source maps: warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("less-loader"): errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("less-loader"): module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"body {\\\\n  font: 100% Helvetica, sans-serif;\\\\n  color: #333;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/base.less\\"],\\"names\\":[],\\"mappings\\":\\"AAGA;EACE,gCAAA;EACA,WAAA;AAFF\\",\\"sourcesContent\\":[\\"@font-stack:    Helvetica, sans-serif;\\\\n@primary-color: #333;\\\\n\\\\nbody {\\\\n  font: 100% @font-stack;\\\\n  color: @primary-color;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("less-loader"): result 1`] = `
Array [
  Array [
    "./source-map/base.less",
    "body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}
",
    "",
    Object {
      "mappings": "AAGA;EACE,gCAAA;EACA,WAAA;AAFF",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/base.less",
      ],
      "sourcesContent": Array [
        "@font-stack:    Helvetica, sans-serif;
@primary-color: #333;

body {
  font: 100% @font-stack;
  color: @primary-color;
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("less-loader"): warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("postcss-loader"): errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("postcss-loader"): module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.postcss.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\":root {\\\\n  --fontSize: 1rem;\\\\n  --mainColor: rgba(18,52,86,0.47059);\\\\n  --secondaryColor: rgba(102, 51, 153, 0.9);\\\\n}\\\\n\\\\nhtml {\\\\n  overflow-x: hidden;\\\\n  overflow-y: auto;\\\\n  overflow: hidden auto;\\\\n}\\\\n\\\\n@media (max-width: 50rem) {\\\\n  body {\\\\n    color: rgba(18,52,86,0.47059);\\\\n    color: var(--mainColor);\\\\n    font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;\\\\n    font-size: 1rem;\\\\n    font-size: var(--fontSize);\\\\n    line-height: calc(1rem * 1.5);\\\\n    line-height: calc(var(--fontSize) * 1.5);\\\\n    word-wrap: break-word;\\\\n    padding-left: calc(1rem / 2 + 1px);\\\\n    padding-right: calc(1rem / 2 + 1px);\\\\n    padding-left: calc(var(--fontSize) / 2 + 1px);\\\\n    padding-right: calc(var(--fontSize) / 2 + 1px);\\\\n  }\\\\n}\\\\n\\\\nh1,h2,h3,h4,h5,h6 {\\\\n  margin-top: 0;\\\\n  margin-bottom: 0;\\\\n}\\\\n\\\\na {\\\\n  color: rgba(0, 0, 255, 0.9)\\\\n}\\\\n\\\\na:hover {\\\\n   color: #639;\\\\n }\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/basic.postcss.css\\"],\\"names\\":[],\\"mappings\\":\\"AAKA;EACE,gBAAgB;EAChB,mCAAsB;EACtB,yCAA4C;AAC9C;;AAEA;EACE,kBAAqB;EAArB,gBAAqB;EAArB,qBAAqB;AACvB;;AAEA;EACE;IACE,6BAAuB;IAAvB,uBAAuB;IACvB,iGAAsB;IACtB,eAA0B;IAA1B,0BAA0B;IAC1B,6BAAwC;IAAxC,wCAAwC;IACxC,qBAAyB;IACzB,kCAA+C;IAA/C,mCAA+C;IAA/C,6CAA+C;IAA/C,8CAA+C;EACjD;AACF;;AAEA;EACE,aAAe;EAAf,gBAAe;AACjB;;AAEA;EACE;AAKF;;AAHA;GACG,WAAoB;CACtB\\",\\"sourcesContent\\":[\\"@import \\\\\\"./nested/nested.postcss.css\\\\\\";\\\\n\\\\n@custom-media --viewport-medium (width <= 50rem);\\\\n@custom-selector :--heading h1, h2, h3, h4, h5, h6;\\\\n\\\\n:root {\\\\n  --fontSize: 1rem;\\\\n  --mainColor: #12345678;\\\\n  --secondaryColor: lab(32.5 38.5 -47.6 / 90%);\\\\n}\\\\n\\\\nhtml {\\\\n  overflow: hidden auto;\\\\n}\\\\n\\\\n@media (--viewport-medium) {\\\\n  body {\\\\n    color: var(--mainColor);\\\\n    font-family: system-ui;\\\\n    font-size: var(--fontSize);\\\\n    line-height: calc(var(--fontSize) * 1.5);\\\\n    overflow-wrap: break-word;\\\\n    padding-inline: calc(var(--fontSize) / 2 + 1px);\\\\n  }\\\\n}\\\\n\\\\n:--heading {\\\\n  margin-block: 0;\\\\n}\\\\n\\\\na {\\\\n  color: rgb(0 0 100% / 90%);\\\\n\\\\n&:hover {\\\\n   color: rebeccapurple;\\\\n }\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("postcss-loader"): result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.postcss.css",
    ".nested {
  color: blue;
}
",
    "",
    Object {
      "mappings": "AAAA;EACE,WAAW;AACb",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/nested/nested.postcss.css",
      ],
      "sourcesContent": Array [
        ".nested {
  color: blue;
}
",
      ],
      "version": 3,
    },
  ],
  Array [
    "./source-map/basic.postcss.css",
    ":root {
  --fontSize: 1rem;
  --mainColor: rgba(18,52,86,0.47059);
  --secondaryColor: rgba(102, 51, 153, 0.9);
}

html {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}

@media (max-width: 50rem) {
  body {
    color: rgba(18,52,86,0.47059);
    color: var(--mainColor);
    font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;
    font-size: 1rem;
    font-size: var(--fontSize);
    line-height: calc(1rem * 1.5);
    line-height: calc(var(--fontSize) * 1.5);
    word-wrap: break-word;
    padding-left: calc(1rem / 2 + 1px);
    padding-right: calc(1rem / 2 + 1px);
    padding-left: calc(var(--fontSize) / 2 + 1px);
    padding-right: calc(var(--fontSize) / 2 + 1px);
  }
}

h1,h2,h3,h4,h5,h6 {
  margin-top: 0;
  margin-bottom: 0;
}

a {
  color: rgba(0, 0, 255, 0.9)
}

a:hover {
   color: #639;
 }
",
    "",
    Object {
      "mappings": "AAKA;EACE,gBAAgB;EAChB,mCAAsB;EACtB,yCAA4C;AAC9C;;AAEA;EACE,kBAAqB;EAArB,gBAAqB;EAArB,qBAAqB;AACvB;;AAEA;EACE;IACE,6BAAuB;IAAvB,uBAAuB;IACvB,iGAAsB;IACtB,eAA0B;IAA1B,0BAA0B;IAC1B,6BAAwC;IAAxC,wCAAwC;IACxC,qBAAyB;IACzB,kCAA+C;IAA/C,mCAA+C;IAA/C,6CAA+C;IAA/C,8CAA+C;EACjD;AACF;;AAEA;EACE,aAAe;EAAf,gBAAe;AACjB;;AAEA;EACE;AAKF;;AAHA;GACG,WAAoB;CACtB",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/basic.postcss.css",
      ],
      "sourcesContent": Array [
        "@import \\"./nested/nested.postcss.css\\";

@custom-media --viewport-medium (width <= 50rem);
@custom-selector :--heading h1, h2, h3, h4, h5, h6;

:root {
  --fontSize: 1rem;
  --mainColor: #12345678;
  --secondaryColor: lab(32.5 38.5 -47.6 / 90%);
}

html {
  overflow: hidden auto;
}

@media (--viewport-medium) {
  body {
    color: var(--mainColor);
    font-family: system-ui;
    font-size: var(--fontSize);
    line-height: calc(var(--fontSize) * 1.5);
    overflow-wrap: break-word;
    padding-inline: calc(var(--fontSize) / 2 + 1px);
  }
}

:--heading {
  margin-block: 0;
}

a {
  color: rgb(0 0 100% / 90%);

&:hover {
   color: rebeccapurple;
 }
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("postcss-loader"): warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("stylus-loader"): errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("stylus-loader"): module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"body {\\\\n  font: 14px/1.5 Helvetica, arial, sans-serif;\\\\n}\\\\nbody #logo {\\\\n  border-radius: 5px;\\\\n}\\\\n/*# sourceMappingURL=test/fixtures/source-map/base.css.map */\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/base.styl\\"],\\"names\\":[],\\"mappings\\":\\"AAAA;EACE,2CAAwB;AAC1B;AAAE;EACE,kBAAe;AAEnB;AACA,4DAA4D\\",\\"sourcesContent\\":[\\"body {\\\\n  font: 14px/1.5 Helvetica, arial, sans-serif;\\\\n  #logo {\\\\n    border-radius: 5px;\\\\n  }\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("stylus-loader"): result 1`] = `
Array [
  Array [
    "./source-map/base.styl",
    "body {
  font: 14px/1.5 Helvetica, arial, sans-serif;
}
body #logo {
  border-radius: 5px;
}
/*# sourceMappingURL=test/fixtures/source-map/base.css.map */",
    "",
    Object {
      "mappings": "AAAA;EACE,2CAAwB;AAC1B;AAAE;EACE,kBAAe;AAEnB;AACA,4DAA4D",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/base.styl",
      ],
      "sourcesContent": Array [
        "body {
  font: 14px/1.5 Helvetica, arial, sans-serif;
  #logo {
    border-radius: 5px;
  }
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps ("stylus-loader"): warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps with "sourceRoot": errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps with "sourceRoot": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/basic.css\\"],\\"names\\":[],\\"mappings\\":\\"AAEA;EACE,UAAU;AACZ\\",\\"sourcesContent\\":[\\"@import \\\\\\"./nested/nested.css\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps with "sourceRoot": result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
    Object {
      "mappings": "AAAA;EACE,WAAW;AACb",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/nested/nested.css",
      ],
      "sourcesContent": Array [
        ".nested {
  color: blue;
}
",
      ],
      "version": 3,
    },
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
    Object {
      "mappings": "AAEA;EACE,UAAU;AACZ",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/basic.css",
      ],
      "sourcesContent": Array [
        "@import \\"./nested/nested.css\\";

.class {
  color: red;
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps with "sourceRoot": warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps without "sourceRoot": errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps without "sourceRoot": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/basic.css\\"],\\"names\\":[],\\"mappings\\":\\"AAEA;EACE,UAAU;AACZ\\",\\"sourcesContent\\":[\\"@import \\\\\\"./nested/nested.css\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps without "sourceRoot": result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
    Object {
      "mappings": "AAAA;EACE,WAAW;AACb",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/nested/nested.css",
      ],
      "sourcesContent": Array [
        ".nested {
  color: blue;
}
",
      ],
      "version": 3,
    },
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
    Object {
      "mappings": "AAEA;EACE,UAAU;AACZ",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/basic.css",
      ],
      "sourcesContent": Array [
        "@import \\"./nested/nested.css\\";

.class {
  color: red;
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps when previous loader generates source maps without "sourceRoot": warnings 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps: errors 1`] = `Array []`;

exports[`"sourceMap" option true should generate source maps: module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../src/runtime/api.js\\";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from \\"-!../../../src/index.js??[ident]!./nested/nested.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(true);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".class {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\",{\\"version\\":3,\\"sources\\":[\\"webpack://source-map/basic.css\\"],\\"names\\":[],\\"mappings\\":\\"AAEA;EACE,UAAU;AACZ\\",\\"sourcesContent\\":[\\"@import \\\\\\"./nested/nested.css\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n}\\\\n\\"]}]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`"sourceMap" option true should generate source maps: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./source-map/nested/nested.css",
    ".nested {
  color: blue;
}
",
    "",
    Object {
      "mappings": "AAAA;EACE,WAAW;AACb",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/nested/nested.css",
      ],
      "sourcesContent": Array [
        ".nested {
  color: blue;
}
",
      ],
      "version": 3,
    },
  ],
  Array [
    "./source-map/basic.css",
    ".class {
  color: red;
}
",
    "",
    Object {
      "mappings": "AAEA;EACE,UAAU;AACZ",
      "names": Array [],
      "sources": Array [
        "webpack://source-map/basic.css",
      ],
      "sourcesContent": Array [
        "@import \\"./nested/nested.css\\";

.class {
  color: red;
}
",
      ],
      "version": 3,
    },
  ],
]
`;

exports[`"sourceMap" option true should generate source maps: warnings 1`] = `Array []`;
